			   XPCE ChangeLog
			   ==============

* FIXED: Term-description of class view.

* FIXED: Cursor up/down in list-browser.  Anjo Anjewierden.

* FIXED: default-button and modified-item handling in nested dialog-groups.
  Juergen Repp.

* FIXED: Make `window->background' work with images on Windows.  Used to be
  supported on the X11 version only.


VERSION 6.1.10, distributed with SWI-Prolog 5.1.10
==================================================

* ENHANCED: many small changes to PceEmacs, cross-referencer and other parts
  of the XPCE libraries dealing with Prolog itself.

* MODIFIED: moved library(emacs/prolog_xref) to library(pce_prolog_xref) for
  better library structure.

* ADDED: library(pce_class_index).  Ongoing work to simplify class management.

* ADDED: Support for cross-referencing class definitions and usage from
  library('emacs/prolog_xref').

* ADDED: Class keybinding reports pending keystrokes of multi-key commands.


VERSION 6.1.9, distributed with SWI-Prolog 5.1.9
================================================

* ADDED: Enhanced HTML/XGML/XML structure viewer from library(doc/xml_browse)
  with search and some more goodies.  Added this tool to to demo programs.

* MODIFIED: Use win_btnface for default background colour of dialog
  windows.  Seems to make more sense to get a reasonable default
  colour on Windows XP.

* ADDED: PceEmacs: cross-referencer check for :- arithmetic_function/1.

* ADDED: optional `before' argument to `node->son' for efficient insertion
  of nodes at arbitrary locations.

* FIXED: Bug#27 icon directory prolog/lib/doc/icons was not installed.
  Lourens van der Meij.

* FIXED: PceEmacs: do not signal ->idle when a gesture is in progress
  (avoids re-colouring while waiting for the user to select a popup-entry).

* FIXED: library(pce_style_item). Ferreira Maurizio.

* ADDED: <->gap to graphical_browser (library(pce_graphical_browser)).

* FIXED: Placing of window objects in tables (class table).
